Start info supp 'cart'

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -22,6 +22,7 @@ $btn-add-size: 18px;
     border: $blue-dark solid 0.5px;
     text-decoration: none;
     color: black;
+    cursor: pointer;
   }
 }
 
