--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -66,9 +66,6 @@
   box-shadow:  2px 3px 10px 2px $blue-dark-shadow;
   padding: 8px;
   border-radius: 8px;
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
   background-color: rgba(255, 255, 255, 0.9);
   max-width: 330px;
   .card-info-title {
@@ -88,6 +85,17 @@
       color: black;
       text-decoration: none;
     }
+  }
+  #card-info-close {
+    position: absolute;
+    right: 8px;
+    cursor: pointer;
+  }
+}
+
+.card-info.pointer {
+  &:hover {
+    cursor: pointer;
   }
 }
 
