--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -16,6 +16,11 @@
   width: 100%;
 }
 
+.container-btn {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .container-header-form {
   display: flex;
   align-items: flex-start;
