--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
-  <%= link_to "Créer un nouveau PPSP", new_ppsp_path, class: 'btn-blue' %>
-    <% if policy(Page).database? %>
-      <%= link_to "Modifier les bases de données", database_path, class: 'btn-orange' %>
-    <% end %>
+  <div class="container-btn">
+    <%= link_to "Créer un nouveau PPSP", new_ppsp_path, class: 'btn-blue' %>
+      <% if policy(Page).database? %>
+        <%= link_to "Modifier les bases de données", database_path, class: 'btn-orange mt-2' %>
+      <% end %>
+  </div>
   <h1 class='ppsp-title'><%= "Les PPSP de #{current_user.company.name}" %></h1>
   <div id="ppsps-react" data-current=<%= current_user.id %>></div>
 </div>
