--- a/app/views/ppsps/index.html.erb
+++ b/app/views/ppsps/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="container-btn">
-    <%= link_to "Créer un nouveau PPSP", new_ppsp_path, class: 'btn-blue' %>
+    <%= link_to "Créer un nouveau PPSP", new_ppsp_path, class: 'btn-blue mr-2 mt-2' %>
       <% if policy(Page).database? %>
         <%= link_to "Modifier les bases de données", database_path, class: 'btn-orange mt-2' %>
       <% end %>
