--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class="dropdown-ppsp">
       <div class="nav-icon">
-        <i class="fas fa-caret-square-down"></i>
+        <%= image_tag 'navbar-icon.png', width: 25, height: 25 %>
       </div>
       <div class="dropdown-ppsp-content">
         <%= link_to "Mon profil", profile_path(current_user), class: 'nav-btn-blue-ext' %>
