--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -55,6 +55,7 @@
   justify-content: center;
   width: 100%;
   margin-bottom: 20px;
+  flex-grow: 2;
 }
 
 .home-card {
@@ -65,7 +66,9 @@
   }
   .container-media {
     width: 100%;
-    height: 300px;
+    height: 75%;
+    display: flex;
+    justify-content: center;
   }
 }
 
