--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,7 +20,7 @@
         Stockage centralisé de tous vos documents
       </div>
       <div class="container-media">
-        <%= video_tag('video-ppsp.mp4', width: '100%', height: '100%' ,autoplay: true, loop: true, muted: 'muted') %>
+        <%= video_tag('video-ppsps.mp4', width: '100%', height: '100%' ,autoplay: true, loop: true, muted: 'muted') %>
       </div>
     </div>
     <div class="home-card">
