--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -241,3 +241,18 @@ $btn-add-size: 18px;
     }
   }
 }
+
+#btn-mes-infos {
+  text-align: center;
+  border-radius: 50%;
+  border: solid 1px black;
+  padding: 8px;
+  box-shadow: 1px 1px 2px 2px $blue-shadow;
+  .btn-num {
+    font-weight: 800;
+  }
+  &:hover {
+    cursor: pointer;
+    box-shadow: 1px 1px 4px 4px $blue-shadow;
+  }
+}
