--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,9 @@
     <h1>Obras</h1>
     <%# <%= image_tag('logo-ppsp.png') %>
     <h2>Créez votre Plan Particulier de Sécurité et de Protection de la Santé en toute simplicité</h2>
-    <%= link_to "Demander une démo", "mailto:alexis.lenoir60@gmail.com", class: "btn-orange" %>
+   <button type="button" class="btn-orange" data-toggle="modal" data-target="#modal-contact">
+      Demander une démo
+    </button>
   </div>
   <div class="home-container-card">
     <div class="home-card">
@@ -38,5 +40,21 @@
     <h2>
       Ne perdez plus de temps avec la paperasse, laissez-nous nous en charger
     </h2>
+  </div>
+</div>
+
+<div class="modal fade rounded" id="modal-contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Saisir les informations ci-dessous</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <%= render 'contact/mailer/form' %>
+      </div>
+    </div>
   </div>
 </div>
