--- a/app/views/contact/mailer/_form.html.erb
+++ b/app/views/contact/mailer/_form.html.erb
@@ -1,18 +1,17 @@
 <form action=<%= contact_path %>>
   <div class="form-group">
     <label for="name">Name</label>
-    <input type="text" class="form-control" id="name" name="name" placeholder="Jean-Michel Test"/>
+    <input type="text" required="true" class="form-control" id="name" name="name" placeholder="Jean-Michel Test"/>
   </div>
   <div class="form-group">
     <label for="email">Email</label>
-    <input type="email" class="form-control" id="email" name="email" placeholder="JeanMichel-test@gmail.com"/>
+    <input type="email" required="true" class="form-control" id="email" name="email" placeholder="JeanMichel-test@gmail.com"/>
   </div>
   <div class="form-group">
     <label for="description">Raisons</label>
-    <textarea class="form-control" rows="3" id="description" name="description" placeholder="Faciliter la rédaction de PPSPS au sein de mon entreprise de BTP" ></textarea>
+    <textarea class="form-control" required="true" rows="3" id="description" name="description" placeholder="Faciliter la rédaction de PPSPS au sein de mon entreprise de BTP" ></textarea>
   </div>
   <div class="d-flex justify-content-end">
-    <a class="btn-orange-ext mr-2" data-dismiss="modal" >Close</a>
     <button type="submit" class="btn-orange">Envoyer mail</button>
   </div>
 </form>
