handle the fact to destroy an element in info supp without closing "the cart"

--- a/app/views/ppsps/show.pdf.erb
+++ b/app/views/ppsps/show.pdf.erb
@@ -376,7 +376,7 @@
     <% if @ppsp.altitude_works != [] %>
       <div class="pdf-text-container my-3">
         <div class="pdf-title">
-          Travail en altitude
+          Travail en hauteur
         </div>
         <% @ppsp.selected_altitudes.each do |altitude| %>
           <% if altitude.other %>
