--- a/app/views/ppsps/informations_supplementaires.html.erb
+++ b/app/views/ppsps/informations_supplementaires.html.erb
@@ -124,7 +124,7 @@
     <div class="container-bottom-right">
       <div id="cardSelect">
         <% if @num_info_select > 0 %>
-          <div class="card-info hidden">
+          <div class="card-info hidden" data-show=<%= params[:destroy] ? 'true' : '' %>>
             <div id="card-info-close">x</div>
             <h3><b>Selection</b></h3>
             <% if @selected_installation_active.count > 0 %>
@@ -135,7 +135,7 @@
                     <%= "#{select_installation.site_installation.name} <i style='font-size: 12px'>(#{select_installation.site_installation.mobile ? "mobile" : "fixe"})</i>".html_safe %>
                   </div>
                   <div class="card-info-delete">
-                    <%= link_to "x",  ppsp_selected_installation_path(@ppsp.id, select_installation.id), method: :delete, remote: true, data: {confirm: "Êtes-vous sûr de vouloir supprimer ?"} %>
+                    <%= link_to "x",  ppsp_selected_installation_path(@ppsp.id, select_installation.id), method: :delete, remote: true %>
                   </div>
                 </div>
               <% end %>
@@ -152,7 +152,7 @@
                     <% end %>
                   </div>
                   <div class="card-info-delete">
-                    <%= link_to "x",  ppsp_selected_altitude_path(select_altitude.ppsp.id, select_altitude.id), method: :delete, remote: true, data: {confirm: "Êtes-vous sûr de vouloir supprimer ?"} %>
+                    <%= link_to "x",  ppsp_selected_altitude_path(select_altitude.ppsp.id, select_altitude.id), method: :delete, remote: true %>
                   </div>
                 </div>
               <% end %>
@@ -165,7 +165,7 @@
                     <%= select_risk.risk.name %>
                   </div>
                   <div class="card-info-delete">
-                    <%= link_to "x",  ppsp_selected_risk_path(select_risk.ppsp.id, select_risk.id), method: :delete, remote: true, data: {confirm: "Êtes-vous sûr de vouloir supprimer ?"} %>
+                    <%= link_to "x",  ppsp_selected_risk_path(select_risk.ppsp.id, select_risk.id), method: :delete, remote: true %>
                   </div>
                 </div>
               <% end %>
@@ -180,7 +180,7 @@
                     </div>
                   </div>
                   <div class="card-info-delete">
-                    <%= link_to "x", ppsp_subcontractor_path(@ppsp, subcontract), method: :delete, remote: true, data: {confirm: "Êtes-vous sûr de vouloir supprimer ?"} %>
+                    <%= link_to "x", ppsp_subcontractor_path(@ppsp, subcontract), method: :delete, remote: true %>
                   </div>
                 </div>
               <% end %>
