--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,7 +22,7 @@ h1 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   text-align: center;
-  font-family: $headers-font;
+  font-family: $body-font;
 }
 
 h2 {
@@ -30,7 +30,7 @@ h2 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   text-align: center;
-  font-family: $headers-font;
+  font-family: $body-font;
 }
 
 h3 {
@@ -38,7 +38,7 @@ h3 {
   margin-top: 0.5em;
   margin-bottom: 0.5em;
   text-align: center;
-  font-family: $headers-font;
+  font-family: $body-font;
 }
 
 body {
