--- a/app/views/ppsps/informations_supplementaires.html.erb
+++ b/app/views/ppsps/informations_supplementaires.html.erb
@@ -1,27 +1,22 @@
-<div class="container d-flex flex-column align-items-center mb-2">
-  <h1>Ajouter des informations supplémentaires si nécessaire</h1>
-  <div class="container-installations">
-    <h3>Installations chantier</h3>
+<h1 class='mb-5'>Ajouter des informations supplémentaires si nécessaire</h1>
+<div class="container-infos-supp mb-2 row">
+  <div class="container-installations col-lg-3">
+    <h3 class='title-infos'>Installations chantier</h3>
     <div class="row justify-content-center">
       <div class="col-12 d-flex justify-content-center">
         <input type="checkbox" class="hidden" id="checkSiteInstallation" name="siteInstallation">
         <label for="checkSiteInstallation" id="CheckSiteInstallation" class="btn-orange-ext">Ajouter</label>
       </div>
-      <div class="hidden-form hidden col-12 row" id="siteInstallationType">
-        <div class="col-6 d-flex justify-content-center">
+      <div class="hidden-form hidden col-12" id="siteInstallationType">
+        <div class="mobile">
           <input type="checkbox" style="display: none" id="checkSiteInstallationMobile" name="siteInstallationMobile">
-          <label for="checkSiteInstallationMobile" class="btn-orange-ext" id="SiteInstallationMobile">Mobile</label>
+          <label for="checkSiteInstallationMobile" class="card-form" id="SiteInstallationMobile">Mobile</label>
         </div>
-        <div class="col-6 d-flex justify-content-center">
-          <input type="checkbox" style="display: none" id="checkSiteInstallationFix" name="siteInstallationFix">
-          <label for="checkSiteInstallationFix" class="btn-orange-ext" id="SiteInstallationFix">Fixe</label>
-        </div>
-
-        <div class="col-6">
+        <div class="mobile-select">
           <div class="hidden-form hidden" id="siteInstallationMobile">
             <form class="simple_form new_selected_installation" id="new_selected_installation" novalidate="novalidate" action=<%= ppsp_selected_installations_path(@ppsp.id)%> accept-charset="UTF-8" data-remote="true" method="post">
               <fieldset class="form-group check_boxes required selected_installation_site_installation">
-                <div class="form-check d-flex flex-wrap justify-content-start">
+                <div class="form-check">
                   <input type="hidden" name="selected_installation[site_installation_id][]" value="">
                   <% SiteInstallation.where(mobile: true).each do |site| %>
                     <div class="form-check">
@@ -37,13 +32,16 @@
             </form>
           </div>
         </div>
-
-        <div class="col-6">
+        <div class="fixe">
+          <input type="checkbox" style="display: none" id="checkSiteInstallationFix" name="siteInstallationFix">
+          <label for="checkSiteInstallationFix" class="card-form" id="SiteInstallationFix">Fixe</label>
+        </div>
+        <div class="fixe-select">
         <%# Not to have a double id with the other form %>
           <div class="hidden-form hidden" id="siteInstallationFix">
             <form class="simple_form new_selected_installation" id="new_selected_installation" novalidate="novalidate" action=<%= ppsp_selected_installations_path(@ppsp.id)%> accept-charset="UTF-8" data-remote="true" method="post">
               <fieldset class="form-group check_boxes required selected_installation_site_installation">
-                <div class="form-check d-flex flex-wrap justify-content-start">
+                <div class="form-check">
                   <input type="hidden" name="selected_installation[site_installation_id][]" value="">
                   <% SiteInstallation.where(mobile: false).each do |site| %>
                     <div class="form-check">
@@ -63,8 +61,8 @@
     </div>
   </div>
 
-  <div class="altitude-work">
-    <h3>Travaux en hauteur</h3>
+  <div class="container-altitude-work col-lg-3">
+    <h3 class='title-infos'>Travaux en hauteur</h3>
     <div class="d-flex flex-column align-items-center">
       <input type="checkbox" class="hidden" id="checkAltitudeWork" name="altitudeWork">
       <label for="checkAltitudeWork" id="CheckAltitudeWork" class="btn-orange-ext">Ajouter</label>
@@ -79,7 +77,9 @@
               <label class="form-check-label collection_check_boxes card-form" id="label_selected_altitude_altitude_work_id_<%= work.id %>" for="selected_altitude_altitude_work_id_<%= work.id %>"><%= work.name %></label>
             </div>
           <% end %>
-          <input class="form-control string required" type="text" placeholder="Autres..." name="selected_altitude[altitude_work_id][]" id="selected_altitude_altitude_work_id_<%= AltitudeWork.last.id + 1 %>">
+          <div class="d-flex justify-content-center">
+            <input class="form-control string form-altitude-other" type="text" placeholder="Autres..." name="selected_altitude[altitude_work_id][]" id="selected_altitude_altitude_work_id_<%= AltitudeWork.last.id + 1 %>">
+          </div>
           <div class="d-flex justify-content-center mt-1">
             <input type="submit" name="commit" class="btn-orange" value="Ajouter" data-disable-with="Ajouter" id="FormAltitudeWork">
           </div>
@@ -88,14 +88,14 @@
     </div>
   </div>
 
-  <div class="risks">
-    <h3>Types de travaux associés au projet</h3>
+  <div class="container-risks col-lg-3">
+    <h3 class='title-infos'>Types de travaux associés au projet</h3>
     <div class="d-flex flex-column align-items-center">
       <label for="checkRisks" id="checkRisks" class="btn-orange-ext">Ajouter</label>
       <form class="simple_form new_selected_risk hidden" id="new_selected_risk" novalidate="novalidate" action=<%= ppsp_selected_risks_path(@ppsp.id)%> accept-charset="UTF-8" data-remote="true" method="post">
         <fieldset class="form-group check_boxes required selected_risk_risk">
           <input type="hidden" name="selected_risk[risk_id][]" value="">
-          <div class="form-check d-flex flex-wrap justify-content-center">
+          <div class="form-check">
             <% Risk.all.each do |risk| %>
               <input class="form-check-input check_boxes required hidden" type="checkbox" value= <%= risk.id %> name="selected_risk[risk_id][]" id=<%= "selected_risk_risk_id_#{risk.id}" %>>
               <label class="form-check-label collection_check_boxes card-form" for=<%= "selected_risk_risk_id_#{risk.id}"%> id=<%= "label_selected_risk_risk_id_#{risk.id}" %>><%= risk.name %></label>
@@ -109,8 +109,8 @@
     </div>
   </div>
 
-  <div class="subcontractor mb-2">
-    <h3>Sous-traitants</h3>
+  <div class="container-subcontractor col-lg-3">
+    <h3 class='title-infos'>Sous-traitants</h3>
     <div class="d-flex justify-content-center mb-2">
       <button type="button" class="btn-orange-ext" data-toggle="modal" data-target="#ModalSubcontractor">
         Ajouter un sous-traitant
@@ -126,7 +126,7 @@
         <% if @num_info_select > 0 %>
           <div class="card-info hidden" data-show=<%= params[:destroy] ? 'true' : '' %>>
             <div id="card-info-close">x</div>
-            <h3><b>Selection</b></h3>
+            <h4><b>Selection</b></h4>
             <% if @selected_installation_active.count > 0 %>
               <h3 class='card-info-title'>Installations</h3>
               <% @selected_installation_active.each do |select_installation| %>
@@ -199,6 +199,7 @@
     
   </div>
   
-
-  <%= link_to "J'ai terminé !", ppsps_path, class: 'btn-blue' %>
+  <div class="container-btn-centered">
+    <%= link_to "J'ai terminé !", ppsps_path, class: 'btn-blue' %>
+  </div>
 </div>
