--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -12,36 +12,41 @@
   margin-right: 20px;
 }
 
-.container-infos-supp {
-  display: flex;
-  flex-wrap: wrap;
+.container-infos {
   margin-right: -15px;
   margin-left: -15px;
 }
 
-.container-installations {
-  width: 100%;
-  margin-bottom: 2em;
-  background-color: rgba(255, 167, 167, 0.411);
-  border-radius: 8px;
+@media(min-width: 1020px) {}
+.container-infos-supp {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  .container-info {
+    width: 250px;
+  }
 }
 
-.container-risks {
-  width: 100%;
-  background-color: rgba(167, 198, 255, 0.411);
-  margin-bottom: 2em;
-}
+@media(max-width: 1019px) {
+  .container-infos-supp {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  
+    .container-info {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
 
-.container-altitude-work {
-  width: 100%;
-  background-color: rgba(214, 255, 167, 0.411);
-  margin-bottom: 2em;
-}
-
-.container-subcontractor {
-  width: 100%;
-  background-color: rgba(255, 246, 167, 0.411);
-  margin-bottom: 2em;
+    .infos-col {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+  }
 }
 
 .container-btn {
