--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -12,27 +12,49 @@
   margin-right: 20px;
 }
 
-.container-infos {
-  margin-right: -15px;
-  margin-left: -15px;
+.container-info {
+  border-radius: 8px;
+  margin-top: 24px;
+  &:nth-child(1n) {
+    box-shadow: 1px 1px 2px 2px $blue-dark-shadow;
+  }
+  &:nth-child(2n) {
+    box-shadow: 1px 1px 2px 2px $orange-shadow;
+  }
 }
 
-@media(min-width: 1020px) {}
 .container-infos-supp {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+}
 
-  .container-info {
-    width: 250px;
+.container-info {
+  height: fit-content;
+}
+
+@media(min-width: 1020px) {
+  .container-infos-supp {
+    flex-wrap: wrap;
+
+    .container-info {
+      width: 250px;
+    }
+  }
+}
+
+@media(min-width: 1200px) {
+  .container-infos-supp {
+    flex-wrap: wrap;
+    
+    .container-info {
+      width: 300px;
+    }
   }
 }
 
 @media(max-width: 1019px) {
   .container-infos-supp {
-    display: flex;
     flex-direction: column;
-    justify-content: center;
   
     .container-info {
       width: 100%;
@@ -75,11 +97,9 @@
   margin: 1em 0;
 }
 
-.container-bottom-right {
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
+.container-cart-info {
   display: flex;
+  margin-right: 8px;
   flex-direction: column;
   justify-content: center;
 }
