--- a/app/assets/stylesheets/components/_icon.scss
+++ b/app/assets/stylesheets/components/_icon.scss
@@ -6,6 +6,18 @@
   }
 }
 
+@media(min-width: 701px) {
+  .icon-home {
+    width: 218px;
+  }
+}
+
+@media(max-width: 700px) {
+  .icon-home {
+    width: 45px;
+  }
+}
+
 #loading {
   background-image: url('gif-loading.gif');
   height: 150px;
