--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -16,6 +16,7 @@ $orange-dark: #e66d58;
 $blue-dark: #006a71;
 $blue-dark-shadow: #00697177;
 $blue-light: #68b0ab;
+$orange-shadow: #ff7e6783;
 $blue-shadow: #68b0ab85;
 $gray-light: #ecf4f3;
 
