--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,13 +12,93 @@
         <%= "#{current_user.first_name} #{current_user.last_name}" %>
       </div>
     </div>
-    <div class="dropdown-ppsp">
-      <div class="nav-icon">
-        <%= image_tag 'navbar-icon.png', width: 25, height: 25 %>
-      </div>
-      <div class="dropdown-ppsp-content">
-        <%= link_to "Mon profil", profile_path(current_user), class: 'nav-btn-blue-ext' %>
-        <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: 'nav-btn-blue' %>
+
+    <div class="d-flex">
+      <% if params[:action] == 'informations_supplementaires' %>
+        <div class="container-cart-info">
+          <div id="cardSelect">
+            <% if @num_info_select > 0 %>
+              <div class="card-info hidden" data-show=<%= params[:destroy] ? 'true' : '' %>>
+                <div id="card-info-close">x</div>
+                <h4><b>Selection</b></h4>
+                <% if @selected_installation_active.count > 0 %>
+                  <h3 class='card-info-title'>Installations</h3>
+                  <% @selected_installation_active.each do |select_installation| %>
+                    <div class="card-info-selected">
+                      <div class="card-info-name">
+                        <%= "#{select_installation.site_installation.name} <i style='font-size: 12px'>(#{select_installation.site_installation.mobile ? "mobile" : "fixe"})</i>".html_safe %>
+                      </div>
+                      <div class="card-info-delete">
+                        <%= link_to "x",  ppsp_selected_installation_path(@ppsp.id, select_installation.id), method: :delete, remote: true %>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+                <% if @selected_altitude_active.count > 0 %>
+                  <h3 class='card-info-title'>Travail en hauteur</h3>
+                  <% @selected_altitude_active.each do |select_altitude| %>
+                    <div class="card-info-selected">
+                      <div class="card-info-name">
+                        <% if select_altitude.other %>
+                          <%= select_altitude.altitude_work.name %>, <%= select_altitude.other %>
+                        <% else %>
+                          <%= select_altitude.altitude_work.name %>
+                        <% end %>
+                      </div>
+                      <div class="card-info-delete">
+                        <%= link_to "x",  ppsp_selected_altitude_path(select_altitude.ppsp.id, select_altitude.id), method: :delete, remote: true %>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+                <% if @selected_risk_active.count > 0 %>
+                  <h3 class="card-info-title">Risques</h3>
+                  <% @selected_risk_active.each do |select_risk| %>
+                    <div class="card-info-selected">
+                      <div class="card-info-name">
+                        <%= select_risk.risk.name %>
+                      </div>
+                      <div class="card-info-delete">
+                        <%= link_to "x",  ppsp_selected_risk_path(select_risk.ppsp.id, select_risk.id), method: :delete, remote: true %>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+                <% if @ppsp.subcontractors.count > 0 %>
+                  <h3 class="card-info-title">Sous Traitants</h3>
+                  <% @ppsp.subcontractors.each do |subcontract| %>
+                    <div class="card-info-selected">
+                      <div class="card-info-body">
+                        <div class="card-info-name">
+                          <%= subcontract.name %> - <%= subcontract.responsible_name %>
+                        </div>
+                      </div>
+                      <div class="card-info-delete">
+                        <%= link_to "x", ppsp_subcontractor_path(@ppsp, subcontract), method: :delete, remote: true %>
+                      </div>
+                    </div>
+                  <% end %>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+
+          <% if @num_info_select > 0 %>
+            <div id="btn-mes-infos">
+              <div class='btn-num'><%= @num_info_select %></div>
+              <div calss='btn-text'>info<%= @num_info_select > 1 ? "s" : "" %></div>
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+      <div class="dropdown-ppsp">
+        <div class="nav-icon">
+          <%= image_tag 'navbar-icon.png', width: 25, height: 25 %>
+        </div>
+        <div class="dropdown-ppsp-content">
+          <%= link_to "Mon profil", profile_path(current_user), class: 'nav-btn-blue-ext' %>
+          <%= link_to "Se déconnecter", destroy_user_session_path, method: :delete, class: 'nav-btn-blue' %>
+        </div>
       </div>
     </div>
   <% else %>
